--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "planning-poker",
+  "name": "polly",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "types": "npx supabase gen types --lang=typescript --project-id \"vbvmuhptumbwrqzcnhyg\" --schema public > database.types.ts"
   },
   "dependencies": {
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "@fontsource-variable/montserrat": "^5.1.0",
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "next": "15.0.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "15.0.2",
+    "supabase": "^1.223.7",
+    "typescript": "^5"
   }
 }
