--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource-variable/montserrat": "^5.1.0",
+    "@sentry/nextjs": "^8.46.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "clsx": "^2.1.1",
