--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "polly",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,26 +13,26 @@
     "types": "npx supabase gen types --lang=typescript --project-id \"vbvmuhptumbwrqzcnhyg\" --schema public > database.types.ts"
   },
   "dependencies": {
-    "@fontsource-variable/montserrat": "^5.1.0",
-    "@sentry/nextjs": "^8.46.0",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@fontsource-variable/montserrat": "^5.2.8",
+    "@sentry/nextjs": "^8.55.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "next": "15.0.2",
-    "posthog-js": "^1.194.4",
+    "next": "15.5.3",
+    "posthog-js": "^1.268.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.3.0",
-    "usehooks-ts": "^3.1.0"
+    "react-icons": "^5.5.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
-    "supabase": "^1.223.7",
-    "typescript": "^5"
+    "@types/node": "^20.19.17",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.5.3",
+    "supabase": "^1.226.4",
+    "typescript": "^5.9.2"
   }
 }
